--- a/src/movie_single_page.html
+++ b/src/movie_single_page.html
@@ -93,13 +93,9 @@
         </section>
 
     </main>
-    <footer class="footer">
-       <div class="container">
-           <a class="footer__logo-link" href="/">
-               <img src="icons/logo.svg" alt="" >
-           </a>
-       </div>
-    </footer>
+<!--    <footer class="footer">-->
+
+<!--    </footer>-->
 </div>
 
 <script src="./js/main.js"></script>
