--- a/src/registration.html
+++ b/src/registration.html
@@ -26,7 +26,10 @@
                             <a class="menu__list-link" href="./actors.html">Actors</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link active" href="./registration.html">Sign in</a>
+                            <a class="menu__list-link" href="./login.html">Sign in</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="/registration">Sign Up</a>
                         </li>
                     </ul>
                 </nav>
@@ -64,29 +67,9 @@
     <main class="main">
         <div class="container">
             <div class="authorization">
-                <div class="authorization__button">
-                    <button class="btn authorization__button-active" data-tabs-handler="login">Login</button>
-                    <button class="btn" data-tabs-handler="register">Register</button>
-                </div>
                 <div class="authorization__form-wrapper">
-                    <div class="authorization__login " data-tabs-form="login">
 
-<!--                       вставка формы входа -->
-                        <form method="POST" action="/login" class="form">
-                            <h2 class="form__title">Sign in</h2>
-                            <div class="form__content">
-                                <input name="username" type="text" placeholder="Username"
-                                       autofocus="true"/>
-                                <input name="password" type="password" placeholder="Password"/>
-                                <button class="btn btn__form" type="submit">Log In</button>
-<!--                                <a class="form__link" href="/registration">Зарегистрироваться</a>-->
-                            </div>
-                        </form>
-
-<!--                       вставка формы входа -->
-
-                    </div>
-                    <div class="authorization__register hidden " data-tabs-form="register">
+                    <div class="authorization__register" >
 
 <!--                       вставка формы регистрации -->
                         <form method="POST" modelAttribute="userForm" class="form">
@@ -169,23 +152,18 @@
                     <ul class="footer__nav-list">
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Voice over and Subtitle</a></li>
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Media Center</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Privacy</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Contact us</a></li>
                     </ul>
                     <ul class="footer__nav-list">
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Voice Description</a></li>
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Investor Relations</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Legal Provisions</a></li>
                     </ul>
                     <ul class="footer__nav-list">
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Help Center</a></li>
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Job Opportunities</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Cookies Preferences</a></li>
                     </ul>
                     <ul class="footer__nav-list">
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Gift Cards</a></li>
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Terms of Use</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Corporate Informations</a></li>
                     </ul>
                 </div>
             </div>
