--- a/src/list_films.html
+++ b/src/list_films.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Actors</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./css/style.min.css">
 </head>
 <body>
@@ -17,10 +17,13 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__list-item">
-                            <a class="menu__list-link " href="./index.html">Home</a>
+                            <a class="menu__list-link active" href="/">Home</a>
                         </li>
                         <li class="menu__list-item">
                             <a class="menu__list-link" href="./movie_page.html">Movies</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="./actors.html">Actors</a>
                         </li>
                         <li class="menu__list-item">
                             <a class="menu__list-link" href="/login">Sign in</a>
@@ -61,11 +64,70 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="main admin">
         <div class="container">
+            <div class="admin__wrapper">
+                <a class="btn btn__primary" href="./list_users.html">Список пользователей</a>
+                <a class="btn btn__primary" href="./list_films.html">Список фильмов</a>
+                <a class="btn btn__primary" href="./add_film.html">Добавить фильм</a>
+            </div>
+            <div class="films">
+                <ul class="films__list">
+                    <li class="films__item">
+                        <div class="films__thumb">
+                            <img src="./images/posters/it.jpeg" alt="">
+                        </div>
+                        <p>название фильма</p>
+                        <div class="films__btns">
+                            <button class="btn btn__primary delete_film">Удалить фильм</button>
+                            <a href="./edit_film.html" class="btn films__delete ">Редактировать фильм</a>
+                        </div>
+                    </li>
+                    <li class="films__item">
+                        <div class="films__thumb">
+                            <img src="./images/posters/it.jpeg" alt="">
+                        </div>
+                        <p>название фильма</p>
+                        <div class="films__btns">
+                            <button class="btn btn__primary delete_film">Удалить фильм</button>
+                            <a href="./edit_film.html" class="btn films__delete ">Редактировать фильм</a>
+                        </div>
+                    </li>
+                    <li class="films__item">
+                        <div class="films__thumb">
+                            <img src="./images/posters/it.jpeg" alt="">
+                        </div>
+                        <p>название фильма</p>
+                        <div class="films__btns">
+                            <button class="btn btn__primary delete_film">Удалить фильм</button>
+                            <a href="./edit_film.html" class="btn films__delete ">Редактировать фильм</a>
+                        </div>
+                    </li>
+                    <li class="films__item">
+                        <div class="films__thumb">
+                            <img src="./images/posters/it.jpeg" alt="">
+                        </div>
+                        <p>название фильма</p>
+                        <div class="films__btns">
+                            <button class="btn btn__primary delete_film">Удалить фильм</button>
+                            <a href="./edit_film.html" class="btn films__delete ">Редактировать фильм</a>
+                        </div>
+                    </li>
 
+                </ul>
+
+            </div>
         </div>
     </main>
+
+
+
+
+
+
+
+
+
     <footer class="footer">
         <div class="footer__content">
             <div class="container">
@@ -128,4 +190,5 @@
 
 <script src="./js/main.js"></script>
 </body>
+
 </html>
