--- a/src/movie_page.html
+++ b/src/movie_page.html
@@ -26,7 +26,10 @@
                             <a class="menu__list-link" href="./actors.html">Actors</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="./registration.html">Sign in</a>
+                            <a class="menu__list-link" href="/login">Sign in</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="/registration">Sign Up</a>
                         </li>
                     </ul>
                 </nav>
@@ -49,7 +52,7 @@
                             </a>
                         </li>
                         <li class="menu-account__list-item">
-                            <a class="menu-account__list-link" href="./registration.html">
+                            <a class="menu-account__list-link" href="#">
                                 <svg class="icon">
                                     <use xlink:href="./icons/sprite.svg#account"></use>
                                 </svg>
@@ -181,23 +184,18 @@
                     <ul class="footer__nav-list">
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Voice over and Subtitle</a></li>
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Media Center</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Privacy</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Contact us</a></li>
                     </ul>
                     <ul class="footer__nav-list">
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Voice Description</a></li>
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Investor Relations</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Legal Provisions</a></li>
                     </ul>
                     <ul class="footer__nav-list">
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Help Center</a></li>
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Job Opportunities</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Cookies Preferences</a></li>
                     </ul>
                     <ul class="footer__nav-list">
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Gift Cards</a></li>
                         <li class="footer__nav-item"><a class="footer__nav-link" href="#">Terms of Use</a></li>
-                        <li class="footer__nav-item"><a class="footer__nav-link" href="#">Corporate Informations</a></li>
                     </ul>
                 </div>
             </div>
